Changes for Perl extension Module-Install

0.87 Thu  7 May 2009
	- The other half of MSTROUT's changes

0.86 Sat  2 May 2009
	- Add --alldeps option to say yes to optional dependencies (MSTROUT)
	- Alter _check_lock to test the CPAN version and use
	  PERL5_CPAN_IS_RUNNING if new enough so we don't accidentally
	  configure CPAN unless it's so old we have no choice (MSTROUT)
	- Tweak the SkipInstall logic so --skipdeps bypasses everything
	  again including any loading of CPAN, no matter how old (MSTROUT)
	- Adding ./example, ./test and ./xt to the no_index list (ADAMK)
	- Removed $VERSION from the tests (ADAMK)
	- Various POD fixes (ADAMK)

0.85 Sun 19 Apr 2009 - Adam Kennedy
	- All files no use strict to satisfy Kwalitee (ADAMK)

0.84 Tue 14 Apr 2009 - Adam Kennedy
	- Fix incorrect if => unless conversion (CHORNY)

0.83 Tue 14 Apr 2009 - Adam Kennedy
	- Module::Install::DSL wasn't correctly loading the main
	  Module::Install package when trying to install on a host
	  that didn't have M:I installed locally (CSJEWELL)
	- Module::Install no longer supports Perl versions less than
	  5.005, so we can now safely just "require" File::Spec (ADAMK)

0.82 Wed  9 Apr 2009 - Adam Kennedy
	- If configure_requires has ExtUtils::MakeMaker and it's version
	  requires perl 5.6, require perl 5.6 for dist in META.yml (CHORNY)
	- Fixes to Module/AutoInstall.pm: (MSTROUT)
	  - don't prompt for required dependencies under CPAN/CPANPLUS
	  - allow PERL_AUTOINSTALL_PREFER_CPAN env var to disable cpanp use
	- Module::Install::DSL now correctly installs itself into the
	  generated tarball (ADAMK)
	- Preferentially dispatch leading-underscore methods used in plugins
	  to the main Module::Install object (ADAMK)

0.81 Tue 24 Mar 2009 - Adam Kennedy
	- Use 3-argument open when Perl >= 5.006 (ADAMK)
	- Support for 'keywords' key in META.yml (CHORNY)
	- More URLs for licenses, test for this (CHORNY)
	- tests for extracting link to bugtracker,
	  will more correctly extract them (CHORNY)