@@ -2,6 +2,7 @@ Changes for Perl extension Module-Install
 
 0.87 Thu  7 May 2009
 	- The other half of MSTROUT's changes
+        - A note mentioning to bug MSTROUT if you run into problems
 
 0.86 Sat  2 May 2009
 	- Add --alldeps option to say yes to optional dependencies (MSTROUT)
